Fix broken styles

--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -34,6 +34,24 @@ a.social-icon:hover {
   padding: 0;
 }
 
+.layout-header {
+  display: flex;
+}
+
+.social-icons-section {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 1.5em;
+  right: 1em;
+}
+
+@media screen and (min-width: 600px) {
+  .social-icons-section {
+    position: fixed;
+  }
+}
+
 @media screen and (max-width: 500px) {
   a.social-icon:hover {
     transform: scale(1);
@@ -117,8 +135,8 @@ a.social-icon:hover {
     display: none;
   }
 
-  .social-icons-section {
-    display: none;
+  .bio-content {
+    padding-right: 2em;
   }
 }
 
